@@ -3,3 +3,4 @@ Changelog
 28042012:
 1, rewrite screensaver switch script(screen.py)
 2, modify diff.sh to prevent accidentally agreement (if you press enter frequently)
+3, Finished Second Alpha build (aka selection list generator in gensl.py is in alpha branch)
